1. updated the PreferencesView to retrieve input and PreferencesController to execute & process the data 2. updated PreferencesInputData which stores and get user input (difficulties, type... etc.) 3. updated triviaapi, ApiQuestionFetcher generates API url based on inputData and creates list<question> for game play 4. created new entity: Question & GameState